add todo section

--- a/plot_desired_velocity/plot_desired_velocity.ipynb
+++ b/plot_desired_velocity/plot_desired_velocity.ipynb
@@ -42,7 +42,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -74,7 +74,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -126,13 +126,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "So now we make a pool of **nproc** processes and map the data **FRAMEWISE** to the plot function "
+      "In order to make things run faster (we have no time!), we make a pool of **nproc** processes and map the data **FRAMEWISE** to the plot function "
      ]
     },
     {
@@ -176,12 +176,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Read Data in 0.0016 /s\n",
-        "Run Time 0.1505 /s\n"
+        "Read Data in 0.0064 /s\n",
+        "Run Time 0.9621 /s\n"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -202,82 +202,31 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Run Mencoder ... \n"
+       ]
+      }
+     ],
      "prompt_number": 10
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 4,
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
+     "source": [
+      "Todo"
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "source": [
+      "Use **PyQtGraph** insteed of the *very* slow **matplotlib**"
+     ]
     }
    ],
    "metadata": {}
