--- a/Widgets.ipynb
+++ b/Widgets.ipynb
@@ -34,7 +34,7 @@
       "    fig, ax = plt.subplots(figsize=(4, 3),\n",
       "                           subplot_kw={'axisbg':'#EEEEEE',\n",
       "                                       'axisbelow':True})\n",
-      "    ax.grid(color='w', linewidth=2, linestyle='solid')\n",
+      "    ax.grid(coblor='w', linewidth=2, linestyle='solid')\n",
       "    x = np.linspace(0, 10, 1000)\n",
       "    ax.plot(x, amplitude * np.sin(x), color=color,\n",
       "            lw=5, alpha=0.4)\n",
