--- a/plot_desired_velocity/plot_desired_velocity.ipynb
+++ b/plot_desired_velocity/plot_desired_velocity.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "plot_desired_velocity"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -225,7 +225,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Use **PyQtGraph** insteed of the *very* slow **matplotlib**"
+      "Use [PyQtGraph](http://www.pyqtgraph.org/) insteed of the *very* slow `matplotlib`"
      ]
     }
    ],
