change directory setting

--- a/Widgets.ipynb
+++ b/Widgets.ipynb
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Cool [examples](http://jakevdp.github.io/blog/2013/12/05/static-interactive-widgets/) of interactive plots"
+      "Cool [examples](http://jakevdp.github.io/blog/2013/12/05/static-interactive-widgets/) of interactive ~~plots~~"
      ]
     },
     {
