--- a/plot_desired_velocity.ipynb
+++ b/plot_desired_velocity.ipynb
@@ -66,7 +66,7 @@
       "import pandas as pd\n",
       "import os, time\n",
       "#------------ set input ----------\n",
-      "filename = \"log.txt\"\n",
+      "filename = \"plot_desired_velocity/log.txt\"\n",
       "nproc = 4\n",
       "    \n",
       "\n"
@@ -119,9 +119,9 @@
       "        plt.annotate('%d'%line[6], xy=(x, y), xytext=(x+0.5, y+0.5),\n",
       "                    arrowprops=dict(facecolor='black', shrink=0.05),\n",
       "                    )\n",
-      "    fig.savefig(\"figs/%.4d.png\"%i)\n",
+      "    fig.savefig(\"plot_desired_velocity/figs/%.4d.png\"%i)\n",
       "    plt.clf()\n",
-      "    print \"---> figs/%.4d.png\"%i\n"
+      "    print \"---> plot_desired_velocity/figs/%.4d.png\"%i\n"
      ],
      "language": "python",
      "metadata": {},
@@ -189,7 +189,7 @@
      "collapsed": false,
      "input": [
       "from IPython.display import Image\n",
-      "Image(filename='figs/0000.png')"
+      "Image(filename='plot_desired_velocity/figs/0000.png')"
      ],
      "language": "python",
      "metadata": {},
@@ -219,7 +219,7 @@
      "collapsed": false,
      "input": [
       "if Movie:\n",
-      "    cmd = \"\\\"mf://figs/*.png\\\" -mf w=800:h=600:fps=25:type=png -ovc lavc -lavcopts vcodec=mpeg4 -oac copy -o output.avi\"\n",
+      "    cmd = \"\\\"mf://plot_desired_velocity/figs/*.png\\\" -mf w=800:h=600:fps=25:type=png -ovc lavc -lavcopts vcodec=mpeg4 -oac copy -o output.avi\"\n",
       "    print \"Run Mencoder ... \"\n",
       "    os.system(\"mencoder %s\" %cmd)"
      ],
