clean up repository

--- a/numba.ipynb
+++ b/numba.ipynb
@@ -50,7 +50,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -69,7 +69,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -91,6 +91,8 @@
       "start = time.time()\n",
       "pairwise_numba(X)\n",
       "t_na = time.time()-start\n",
+      "plot(np.arange(10), \"r\")\n",
+      "show()\n",
       "\n",
       "print \"time Python: %.3f /s\"%t_py\n",
       "print \"time Numba: %.3f /s\"%t_na\n",
@@ -100,16 +102,24 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAWgAAAD9CAYAAACROe2RAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFjhJREFUeJzt3X9MVff9x/EXIouzDlDDxAGths3KBYSrWKqJ87o5nWvs\nasuWwjpWEWi2LJlN/2iWLRlZqrR17bfYdX+sbl22NXXJ0m6tldYSvJaOOIf4k666WohY7TrbYEVQ\nvHC+f1DxUuHec+Hec8695/lITJhy6Dtt98mzby73k2QYhiEAgONMsXsAAMDYOKABwKE4oAHAoTig\nAcChOKABwKE4oAHAocIe0A0NDSosLFRBQYEaGhqsmAkAoDAH9PHjx7Vjxw7961//0pEjR7Rr1y6d\nOnXKqtkAwNVCHtDvvPOOSktLNW3aNCUnJ2vlypV68cUXrZoNAFxtaqg/LCgo0M9+9jN9/PHHmjZt\nml599VXddtttI3+elJQU8wEBIBGZ+SHukAW9cOFCPfzww1qzZo3WrVsnr9erKVNGP2IYhuN+/eIX\nv7B9BmZiJjfOxUxhfh0/LqOkxPQhHvabhFVVVWpra9O+ffuUnp6uW2+91fQXBwBICgSk+nrJ55Nq\nakw/FvaA/vDDDyVJp0+f1ksvvaSKiooJzwgArtPRIS1bJjU3S21tUm2t6UdD7qAlqaysTB999JFS\nUlL0m9/8RqmpqZOa1Qo+n8/uEW7ATOYwk3lOnIuZggQC0rZt0pNPSlu2DJdzhN+3SzIMY8JvN5qU\nlKRJPA4AiamjQ7r/fik9XdqxQ7rlllF/bPbs5CcJASBaPrtr3rPnhsM5EmFXHAAAE4Krua1tUgfz\nNRQ0AExGlKs5GAUNABMVg2oORkEDQKRiWM3BKGgAiESMqzkYBQ0AZlhUzcEoaAAIx8JqDkZBA8B4\nbKjmYBQ0AIzFpmoORkEDQDCbqzkYBQ0A1zigmoNR0ADgoGoORkEDcDeHVXMwChqAOzm0moNR0ADc\nx8HVHCxsQdfX1ys/P1+FhYWqqKjQlStXrJgLAKIvDqo5WMgDuqurS88++6za29t17NgxDQ4OaufO\nnVbNBgDRM9bdgBFeQWW1kCuO1NRUpaSkqK+vT8nJyerr61NWVtaoz6mrqxv52OfzOfJOMgAuFoW7\nASfL7/fL7/dH/FzYOwl/+9vf6qGHHtLnP/95rV27Vn/605+uP8ydhACcrKND2rhRSksb825Au0Tl\nTsJTp07pqaeeUldXl86ePave3l49//zzURsSAGIieNdcXe34XfN4Qh7QbW1tWr58uWbPnq2pU6fq\n7rvvVmtrq1WzAUDkOjqk5cvjatc8npAH9MKFC7V//3719/fLMAw1NTXJ4/FYNRsAmJcg1Rws5DcJ\ni4qKVFlZqZKSEk2ZMkWLFy9WbW2tVbMBgDnBu2YHv645UmG/SRjyYb5JCMBODniFxkSYPTv5SUIA\n8SlBqzkY78UBIL4k4K55PBQ0gPjhgmoORkEDcD4XVXMwChqAs7msmoNR0ACcyaXVHIyCBuA8Lq7m\nYBQ0AOegmkehoAE4A9V8AwoagL2o5nFR0ADsQzWHREEDsB7VbAoFDcBaVLNpFDQAa1DNEaOgAcQe\n1TwhIQv6xIkT8nq9I7/S0tK0fft2q2YDEO+o5kkx/Yb9Q0NDysrK0oEDB5STkzP8MG/YD2A8Dr1R\n2wmicqt3sKamJuXm5o4czgAwJqo5akzvoHfu3KmKioobfr+urm7kY5/PJ5/PF425AMQjds1j8vv9\n8vv9ET9nasUxMDCgrKwsvf3228rIyLj+MCsOANLouwEfeUSqrY2LuwHtEtU7CRsbG7VkyZJRhzMA\nSKKaY8jUDvqFF15QeXl5rGcBEE/YNcdc2BXHpUuXdMstt6izs1Nf+MIXRj/MigNwJ16hMSlRexXH\nTTfdpPPnz99wOANwIarZUvwkIQBzOjqk+++X0tPZNVuE9+IAEFpwNdfUUM0WoqABjI9qthUFDeBG\nVLMjUNAARqOaHYOCBjCManYcChoA1exQFDTgZlSzo1HQgFtRzY5HQQNuQzXHDQoacBOqOa5Q0IAb\nUM1xiYIGEh3VHLcoaCBRBQLS1q1UcxyjoIFEdPz4cDXPnEk1xzEKGkgkwdVcW0s1x7mwB3RPT4/K\nysqUl5cnj8ej/fv3WzEXgEgdPy7dfru0d6908CAXtyaAsAf0T37yE33rW9/Sv//9bx09elR5eXlW\nzAXALKo5YYW8k/DChQvyer167733xn6YOwkBewXvmrkbMG6YPTtDfpOws7NTGRkZ2rhxo44cOaIl\nS5aooaFB06dPH/mcurq6kY99Pp98Pt+EhwZgUiAgPf649OSTw/VcU8M6w8H8fr/8fn/Ez4Us6La2\nNi1btkytra1aunSpNm/erNTUVP3yl78cfpiCBqxHNce9qNzqnZ2drezsbC1dulSSVFZWpvb29uhM\nCCAy7JpdJ+SKIzMzUzk5OTp58qQWLFigpqYm5efnWzUbgGuCq/ngQQ5mlwi54pCkI0eOqLq6WgMD\nA8rNzdVzzz2ntLS04YdZcQCxxa45IZk9O8Me0NH4iwCYAHbNCSsqO2gANmDXjE/xXhyAk7BrRhAK\nGnACqhljoKABu1HNGAcFDdiFakYYFDRgB6oZJlDQgJWoZkSAggascq2aZ82immEKBQ3E2rVqXrVK\neuAB6fXXOZxhCgUNxNJnq/nmm+2eCHGEggZiYaxq5nBGhChoINqoZkQJBQ1EC9WMKKOggWigmhED\nFDQwGVQzYoiCBiaKakaMhT2g582bp9TUVCUnJyslJUUHDhywYi7Aua7dcvJ//zdcz9XV3HKCmAh7\nQCclJcnv92vWrFlWzAM4G9UMC5naQXOtFVyPXTNsYKqgV69ereTkZD3wwAOqqakZ9ed1dXUjH/t8\nPvl8vmjPCNiro2P0O89xMCNCfr9ffr8/4ufCXhp77tw5zZ07V//73//0jW98Q08//bRWrFgx/DCX\nxiKRBQLStm3DN2pv2cKN2oiaqF0aO3fuXElSRkaGNmzYwDcJ4Q4dHdKyZdLevcPVXFvL4QzLhTyg\n+/r6dPHiRUnSpUuXtGfPHhUWFloyGGCLQECqr7/+fs3smmGjkDvo//73v9qwYYMkKRAI6Hvf+57W\nrFljyWCA5dg1w2HC7qBDPswOGokgeNfM65phAbNnJz9JCHejmuFgvBcH3IldM+IABQ33oZoRJyho\nuAfVjDhDQcMdqGbEIQoaiY1qRhyjoJG4qGbEOQoaiYdqRoKgoJFYqGYkEAoaiYFqRgKioBH/qGYk\nKAoa8YtqRoKjoBGfqGa4AAWN+EI1w0UoaMQPqhkuQ0HD+ahmuJSpgh4cHFRJSYmys7P1yiuvxHom\n4DqqGS5mqqAbGhrk8XiUxC0TsArVDIQ/oM+cOaPdu3erurqa661gjc/eqF1TwxVUcKWwK44HH3xQ\n27Zt0yeffDLmn9fV1Y187PP55PP5ojUb3Ia7AZGg/H6//H5/xM+FvDR2165damxs1DPPPCO/368n\nnnhi1A6aS2MRNdd2zenp0o4d0i232D0REDNmz86QK47W1la9/PLLmj9/vsrLy9Xc3KzKysqoDQmM\n2jXX1Eh79nA4A58KWdDB9u3bp1/96lcUNKKHaoZLRaWgx/qiwKRRzYAppgt6zIcpaESKagZiU9DA\nhFHNQMR4Lw7EXnA1t7VxMAMmUdCIHaoZmBQKGrFBNQOTRkEjuqhmIGooaEQP1QxEFQWNyaOagZig\noDE5VDMQMxQ0JoZqBmKOgkbkqGbAEhQ0zKOaAUtR0DCHagYsR0EjNKoZsA0FjfFRzYCtKGjciGoG\nHCFkQV++fFkrV67UlStXNDAwoG9/+9uqr6+3ajbYgWoGHCNkQU+bNk179+7V4cOHdfToUe3du1dv\nvfWWVbPBSlQz4Dhhd9DTp0+XJA0MDGhwcFCzZs2K+VCwGNUMOFLYA3poaEiLFy/WqVOn9MMf/lAe\nj2fUn9fV1Y187PP55PP5oj0jYiUQkLZtk558UtqyZbicuXcSiDq/3y+/3x/xc6bvJLxw4YLWrl2r\nRx99dOQQ5k7CONbRIW3cKKWlcTcgYLGo30mYlpamO+64Q21tbZMaDDYL3jVXV7NrBhws5AF9/vx5\n9fT0SJL6+/v1xhtvyOv1WjIYYqCjQ1q+XGpuHt4119ay0gAcLOQO+ty5c/rBD36goaEhDQ0N6fvf\n/76+/vWvWzUbooVdMxCXTO+gx3yYHbTzsWsGHCfqO2jEGXbNQNzjvTgSUXA187pmIG5R0ImEagYS\nCgWdKKhmIOFQ0PGOagYSFgUdz6hmIKFR0PGIagZcgYKON1Qz4BoUdLygmgHXoaDjAdUMuBIF7WRU\nM+BqFLRTUc2A61HQTkM1A/gUBe0kVDOAIBS0E1DNAMZAQduNagYwjpAF3d3drVWrVik/P18FBQXa\nvn27VXMlPqoZQBghb1T54IMP9MEHH6i4uFi9vb1asmSJ/va3vykvL2/4YW5UmRhuOQFcLSo3qmRm\nZqq4uFiSNGPGDOXl5ens2bPRmdCNqGYAETC9g+7q6tKhQ4dUWlo66vfr6upGPvb5fPL5fNGaLbGw\nawZcy+/3y+/3R/ycqUtje3t75fP59POf/1x33XXX9YdZcYQXfKP2I49ItbXcqA24nNmzM2xBX716\nVffcc4/uu+++UYczTKCaAUxCyB20YRjatGmTPB6PNm/ebNVM8Y9dM4AoCLnieOutt/TVr35VixYt\nUtKn/1leX1+vb37zm8MPs+K4Ea/QABCG2bPT1A56sn8RVwjeNW/ZItXUsGsGMKao7aBhQkeHdP/9\nUno6u2YAUcN7cUxG8K65poZdM4CooqAnimoGEGMUdKSoZgAWoaAjQTUDsBAFbQbVDMAGFHQ4VDMA\nm1DQ46GaAdiMgh4L1QzAASjoYFQzAAehoK+hmgE4DAVNNQNwKHcXNNUMwMHcWdCBgLR1K9UMwNHc\nV9DHjw9X88yZVDMAR3NPQQdXc20t1QzA8cIe0FVVVZozZ44KCwutmCc2jh+Xbr9d2rtXOniQi1sB\nxIWwB/TGjRv12muvWTFL9FHNAOJY2B30ihUr1NXVZcEoURa8az54kIMZQNyZ9DcJ6+rqRj72+Xzy\n+XyT/ZKTEwhIjz8+fDfg1q3cDQjAdn6/X36/P+LnTF0a29XVpfXr1+vYsWOjH3bapbHB1cyN2gAc\nyuzZmRiv4mDXDCABxf/roNk1A0hQYQu6vLxcy5cv18mTJ5WTk6PnnnvOirnCo5oBJDhTO+hxH7Zr\nB82uGUAcS8wdNNUMwEXiZwfNrhmAyzi/oKlmAC7l7IIOfr9mqhmAyzizoLnlBAAcWNDccgIAkpxU\n0FQzAIzijIKmmgHgBvYWNNUMAOOyr6CpZgAIyfqCppoBwBRrC5pqBgDTrCloqhkAIhb7gqaaAWBC\nYlfQVDMATEpsDuiODmnZMqm5ebiaa2stvbh1IpczxhozmcNM5jlxLmaKrrAH9GuvvaaFCxfqK1/5\nih577LHQn+yQanbiPxBmMoeZzHPiXMwUXSF30IODg/rxj3+spqYmZWVlaenSpbrzzjuVl5d34yez\nawaAqApZ0AcOHNCXv/xlzZs3TykpKbr33nv197//ffQnOaSaASDRhLyT8K9//atef/11Pfvss5Kk\nP//5z/rnP/+pp59+evhhC/fKAJBIzNxJGHLFEe4AtuXCWABwiZArjqysLHV3d4/87+7ubmVnZ8d8\nKABAmAO6pKRE//nPf9TV1aWBgQH95S9/0Z133mnVbADgaiFXHFOnTtWvf/1rrV27VoODg9q0adPY\nr+AAAERd2NdBr1u3TidOnNC7776rn/70pyO/H9Hroy1SVVWlOXPmqLCw0O5RRnR3d2vVqlXKz89X\nQUGBtm/fbvdIunz5skpLS1VcXCyPxzPqn6vdBgcH5fV6tX79ertHGTFv3jwtWrRIXq9Xt912m93j\nSJJ6enpUVlamvLw8eTwe7d+/39Z5Tpw4Ia/XO/IrLS3NEf+u19fXKz8/X4WFhaqoqNCVK1fsHkkN\nDQ0qLCxUQUGBGhoaQn+yMQGBQMDIzc01Ojs7jYGBAaOoqMh4++23J/KlourNN9802tvbjYKCArtH\nGXHu3Dnj0KFDhmEYxsWLF40FCxY44u/VpUuXDMMwjKtXrxqlpaVGS0uLzRMNe+KJJ4yKigpj/fr1\ndo8yYt68ecZHH31k9xijVFZWGr/73e8Mwxj+Z9jT02PzRNcNDg4amZmZxunTp22do7Oz05g/f75x\n+fJlwzAM47vf/a7xhz/8wdaZjh07ZhQUFBj9/f1GIBAwVq9ebbz77rvjfv6EftTb1OujbbBixQrN\nnDnT7jFGyczMVHFxsSRpxowZysvL09mzZ22eSpo+fbokaWBgQIODg5o1a5bNE0lnzpzR7t27VV1d\n7bhXCDlpngsXLqilpUVVVVWShleRaWlpNk91XVNTk3Jzc5WTk2PrHKmpqUpJSVFfX58CgYD6+vqU\nlZVl60zvvPOOSktLNW3aNCUnJ2vlypV68cUXx/38CR3Q77///qi/+dnZ2Xr//fcn8qVcpaurS4cO\nHVJpaando2hoaEjFxcWaM2eOVq1aJY/HY/dIevDBB7Vt2zZNmeKcu4yl4Zebrl69WiUlJSM/E2Cn\nzs5OZWRkaOPGjVq8eLFqamrU19dn91gjdu7cqYqKCrvH0KxZs/TQQw/p5ptv1pe+9CWlp6dr9erV\nts5UUFCglpYWffzxx+rr69Orr76qM2fOjPv5E/p/Aj+gErne3l6VlZWpoaFBM2bMsHscTZkyRYcP\nH9aZM2f05ptv2v5+Bbt27dIXv/hFeb1eR9WqJP3jH//QoUOH1NjYqGeeeUYtLS22zhMIBNTe3q4f\n/ehHam9v10033aRHH33U1pmuGRgY0CuvvKLvfOc7do+iU6dO6amnnlJXV5fOnj2r3t5ePf/887bO\ntHDhQj388MNas2aN1q1bJ6/XGzJIJnRA8/royFy9elX33HOP7rvvPt111112jzNKWlqa7rjjDrW1\ntdk6R2trq15++WXNnz9f5eXlam5uVmVlpa0zXTN37lxJUkZGhjZs2KADBw7YOk92drays7O1dOlS\nSVJZWZna29ttnemaxsZGLVmyRBkZGXaPora2Ni1fvlyzZ8/W1KlTdffdd6u1tdXusVRVVaW2tjbt\n27dP6enpuvXWW8f93Akd0Lw+2jzDMLRp0yZ5PB5t3rzZ7nEkSefPn1dPT48kqb+/X2+88Ya8Xq+t\nM23dulXd3d3q7OzUzp079bWvfU1//OMfbZ1Jkvr6+nTx4kVJ0qVLl7Rnzx7bXyWUmZmpnJwcnTx5\nUtLwzjc/P9/Wma554YUXVF5ebvcYkoZrdf/+/erv75dhGGpqanLEKu/DDz+UJJ0+fVovvfRS6HXQ\nRL8buXv3bmPBggVGbm6usXXr1ol+mai69957jblz5xqf+9znjOzsbOP3v/+93SMZLS0tRlJSklFU\nVGQUFxcbxcXFRmNjo60zHT161PB6vUZRUZFRWFhoPP7447bO81l+v98xr+J47733jKKiIqOoqMjI\nz893zL/rhw8fNkpKSoxFixYZGzZscMSrOHp7e43Zs2cbn3zyid2jjHjssccMj8djFBQUGJWVlcbA\nwIDdIxkrVqwwPB6PUVRUZDQ3N4f83JBvlgQAsI+zvl0OABjBAQ0ADsUBDQAOxQENAA7FAQ0ADsUB\nDQAO9f+c7ugwkA/NCgAAAABJRU5ErkJggg==\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x36d1790>"
+       ]
+      },
+      {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "time Python: 6.039 /s\n",
-        "time Numba: 0.207 /s\n",
-        "Speedup: 29.138\n"
+        "time Python: 6.203 /s\n",
+        "time Numba: 0.017 /s\n",
+        "Speedup: 356.840\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
